syntax="proto3";
option go_package="./proto/product";
package product;

service Product{
  rpc ProductList(ProductsRequest) returns (ProductsResponse);
  rpc ProductAdd(ProductRequest) returns(MsgResponse);
  rpc ProductDel(IdRequest) returns(MsgResponse);
  rpc ProductToEdit(IdRequest) returns(ProductEditResponse);
  rpc ProductDoEdit(EditRequest) returns(MsgResponse);
}

message IdRequest{
  int32 id=1;
}

message ProductRequest{
  string name=1;
  float price=2;
  int32 num=3;
  string unit=4;
  string pic=5;
  string desc=6;
}

message EditRequest{
  int32 id=1;
  string name=2;
  float price=3;
  int32 num=4;
  string unit=5;
  string pic=6;
  string desc=7;
}

message ProductsRequest{
  int32 currentPage=1;
  int32 pageSize=2;
}

message ProductEditResponse{
  int32 code=1;
  string msg=2;
  ProductInfo info=3;
}

message ProductInfo{
  int32 id=1;
  string name=2;
  float price=3;
  int32 num=4;
  string unit=5;
  string pic=6;
  string desc=7;
  string createTime=8;
}

message MsgResponse{
  int32 code=1;
  string msg=2;
}

message ProductsResponse{
  repeated ProductInfo products=1;
  int32 count=2;
  int32 code=3;
  string msg=4;
}